WASM type fixes and LHS statement fix (🤞)

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -82,7 +82,7 @@ jobs:
               - 'checker/**'
 
       - name: Run parser tests
-        if: steps.changes.outputs.parser == 'true' || github.base_ref == 'main'
+        if: steps.changes.outputs.parser == 'true' || github.ref_name == 'main'
         run: |
           cargo test
           
@@ -91,7 +91,7 @@ jobs:
         working-directory: parser
 
       - name: Run checker specification
-        if: (steps.changes.outputs.checker == 'true' && github.event_name != 'pull_request') || github.base_ref == 'main'
+        if: (steps.changes.outputs.checker == 'true' && github.event_name != 'pull_request') || github.ref_name == 'main'
         run: cargo test
         working-directory: checker/specification
       
@@ -103,7 +103,7 @@ jobs:
           EZNO_DEBUG: 1
 
       - name: Run checker tests
-        if: steps.changes.outputs.checker == 'true' || github.base_ref == 'main'
+        if: steps.changes.outputs.checker == 'true' || github.ref_name == 'main'
         run: |
           # Test checker with the parser features
           cargo test -F ezno-parser 
@@ -111,6 +111,32 @@ jobs:
 
       - name: Run base tests
         run: cargo test
+
+      - name: Build and test WASM
+        if: steps.changes.outputs.src == 'true' || github.ref_name == 'main'
+        # TODO want `continue-on-error: true` but doesn't report error
+        run: |
+          # TODO `cargo check --target wasm32-unknown-unknown --lib` might be good enough
+
+          rustup target add wasm32-unknown-unknown
+          npm ci
+          npm run build
+          npm run run-tests
+
+          node ./dist/cli.cjs info
+          deno run -A ./dist/cli.mjs info
+
+          npx -p typescript tsc --strict --pretty ./build/ezno_lib.d.ts
+          echo "debug passed"
+          cargo run -p ezno-parser --example parse ./build/ezno_lib.d.ts
+          
+          # TODO temp as the types generated can be a bit unpredicatible
+          if ${{ contains(fromJSON('["main", "ast-typegen-direct"]'), github.ref_name ) }}; then
+            npm run build-release
+            npx -p typescript tsc --strict --pretty ./build/ezno_lib.d.ts
+          fi
+        working-directory: src/js-cli-and-library
+        shell: bash
 
   extras:
     runs-on: ubuntu-latest
@@ -137,43 +163,18 @@ jobs:
               - 'checker/**'
 
       - uses: brndnmtthws/rust-action-cargo-binstall@v1
-        if: steps.changes.outputs.src == 'true' || github.base_ref == 'main'
+        if: steps.changes.outputs.src == 'true' || github.ref_name == 'main'
         with:
           packages: wasm-pack@0.12.1
       - uses: denoland/setup-deno@v1
-        if: steps.changes.outputs.src == 'true' || github.base_ref == 'main'
+        if: steps.changes.outputs.src == 'true' || github.ref_name == 'main'
         with:
           deno-version: v1.x
       - uses: actions/setup-node@v3
-        if: steps.changes.outputs.src == 'true' || github.base_ref == 'main'
+        if: steps.changes.outputs.src == 'true' || github.ref_name == 'main'
         with:
           node-version: 18
-
-      - name: Build and test WASM
-        if: steps.changes.outputs.src == 'true' || github.base_ref == 'main'
-        # TODO want `continue-on-error: true` but doesn't report error
-        run: |
-          # TODO `cargo check --target wasm32-unknown-unknown --lib` might be good enough
-
-          rustup target add wasm32-unknown-unknown
-          npm ci
-          npm run build
-          npm run run-tests
-
-          node ./dist/cli.cjs info
-          deno run -A ./dist/cli.mjs info
-
-          npx -p typescript tsc --strict --pretty ./build/ezno_lib.d.ts
-          cargo run -p ezno-parser --example parse ./build/ezno_lib.d.ts
-          
-          # TODO temp as the types generated can be a bit unpredicatible
-          if ${{ contains(fromJSON('["main", "ast-typegen-direct"]'), github.ref_name ) }}; then
-            npm run build-release
-            npx -p typescript tsc --strict --pretty ./build/ezno_lib.d.ts
-          fi
-        working-directory: src/js-cli-and-library
-        shell: bash
-
+      
       - name: Check parser without extras
         if: steps.changes.outputs.parser == 'true'
         # TODO want `continue-on-error: true` but doesn't report error
