--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -127,7 +127,7 @@ jobs:
           deno run -A ./dist/cli.mjs info
 
           npx -p typescript tsc --strict --pretty ./build/ezno_lib.d.ts
-          echo "debug passed"
+          echo "debug checked with TSC"
           cargo run -p ezno-parser --example parse ./build/ezno_lib.d.ts
           
           # TODO temp as the types generated can be a bit unpredicatible
@@ -231,8 +231,8 @@ jobs:
       - name: Run fuzzing
         if: steps.changes.outputs.parser == 'true'
         run: |
-          # cargo fuzz run -s none ${{ matrix.fuzz-target }} -- -timeout=10 -max_total_time=120 -use_value_profile=1 
-          cargo fuzz run -s none ${{ matrix.fuzz-target }} -- -timeout=10 -max_total_time=120 -use_value_profile=1 -fork=1 -ignore_crashes=1
+          # Add '-fork=1 -ignore_crashes=1' to not short-circuit
+          cargo fuzz run -s none ${{ matrix.fuzz-target }} -- -timeout=10 -max_total_time=120 -use_value_profile=1 
         working-directory: parser/fuzz
 
   clippy:
