--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -29,10 +29,22 @@ jobs:
         with:
           packages: hyperfine
 
+      - name: Download scc
+        run: |
+          mkdir scc
+          cd scc
+          gh release download v3.1.0 -R boyter/scc -p '*Linux_x86_64.tar.gz' -O scc.tar.gz
+          tar -xf scc.tar.gz
+          chmod +x scc
+          pwd >> $GITHUB_PATH
+        env:
+          GH_TOKEN: ${{ github.token }}
+
       - name: Build Ezno
         run: cargo build --release
         env:
           CARGO_PROFILE_RELEASE_DEBUG: true
+
 
       - name: Download files
         run: |
@@ -49,6 +61,8 @@ jobs:
 
           \`\`\`ts
           " >> $GITHUB_STEP_SUMMARY
+          lines=$(scc -c --no-cocomo -f json .\private\tocheck\all.ts | jq ".[0].Code")
+          echo "// $lines of TypeScript"
           cat demo.ts >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`
           </details>
@@ -80,7 +94,9 @@ jobs:
           )
 
           for url in "${strings[@]}"; do
-              curl $url > input.js
+              curl -sS $url > input.js
+              echo "--- debug: $url ---"
               cargo run -p ezno-parser --example parse input.js --timings --render-timings
+              echo "--- release: $url ---"
               cargo run -p ezno-parser --release --example parse input.js --timings --render-timings
           done
