--- a/checker/Cargo.toml
+++ b/checker/Cargo.toml
@@ -46,6 +46,7 @@ ordered-float = "4.2.0"
 map_vec = "0.3.0"
 
 serde = { version = "1.0", features = ["derive"], optional = true }
+simple-json-parser = "0.0.2"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 tsify = "0.4.5"
