--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -74,7 +74,24 @@ jobs:
             }
           }' -q '.data.user.sponsorshipsAsMaintainer.edges | map(.node.sponsor.login) | join(", ")')
           
-          echo "sponsors=$SPONSORS" >> $GITHUB_OUTPUT
+          echo "SPONSORS=$SPONSORS" >> $GITHUB_OUTPUT
+
+          CONTRIBUTORS=$(gh api graphql -f query='{
+            repository(owner: "kaleidawave", name: "ezno") {
+              pullRequests(first: 100, states: 'MERGED') {
+                edges {
+                  node {
+                    author {
+                      login
+                    }
+                  }
+                }
+              }
+            }
+          }' -q '.data.repository.pullRequests.edges | map(.node.author.login) | unique | join(", ")')
+
+          echo "CONTRIBUTORS=$CONTRIBUTORS"
+
         shell: bash
         env:
           GH_TOKEN: ${{ github.token }}
@@ -86,7 +103,8 @@ jobs:
           version: ${{ steps.set-arguments.outputs.publish-json-args }}
           crates-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         env:
-          SPONSORS: ${{ steps.get-sponsors.outputs.sponsors }}
+          SPONSORS: ${{ steps.get-sponsors.outputs.SPONSORS }}
+          CONTRIBUTORS: ${{ steps.get-sponsors.outputs.CONTRIBUTORS }}
 
       - name: Add WASM to rustup
         if: ${{ inputs.ezno-version != 'none' }}
