--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -54,12 +54,6 @@ jobs:
           # Generate a file which contains everything that Ezno currently implements  
           cargo run -p ezno-parser --example code_blocks_to_script ./checker/specification/specification.md ./demo.ts
 
-          echo "::group::Generated demo.ts"
-          cat ./demo.ts
-
-          cargo run -p ezno-parser --example parse demo.ts --timings
-          echo "::endgroup::"
-
           echo "::info::Finished file generation"
 
           echo "<details>
@@ -85,7 +79,7 @@ jobs:
           
           # Printing diagnostics, so turn colors off for GH Summary (also affects printing perf I think)
           NO_COLOR=1
-          ./target/release/ezno check demo.ts --timings &>> $GITHUB_STEP_SUMMARY
+          (./target/release/ezno check demo.ts --timings &>> $GITHUB_STEP_SUMMARY) || true
 
           echo "\`\`\`
           </details>
