--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -46,10 +46,6 @@ jobs:
         env:
           CARGO_PROFILE_RELEASE_DEBUG: true
 
-      - name: Download files
-        run: |
-          curl https://esm.sh/v128/react-dom@18.2.0/es2022/react-dom.mjs > react.js
-
       - name: Run checker performance
         shell: bash
         run: |
@@ -57,12 +53,6 @@ jobs:
 
           # Generate a file which contains everything that Ezno currently implements  
           cargo run -p ezno-parser --example code_blocks_to_script ./checker/specification/specification.md ./demo.ts
-
-          echo "::group::Generated demo.ts"
-          cat ./demo.ts
-
-          cargo run -p ezno-parser --example parse demo.ts --timings
-          echo "::endgroup::"
 
           echo "::info::Finished file generation"
 
@@ -89,7 +79,7 @@ jobs:
           
           # Printing diagnostics, so turn colors off for GH Summary (also affects printing perf I think)
           NO_COLOR=1
-          ./target/release/ezno check demo.ts --timings &>> $GITHUB_STEP_SUMMARY
+          (./target/release/ezno check demo.ts --timings &>> $GITHUB_STEP_SUMMARY) || true
 
           echo "\`\`\`
           </details>
@@ -105,6 +95,10 @@ jobs:
           echo "::group::Comparing printing of diagnostics"
           hyperfine -i './target/release/ezno check demo.ts' './target/release/ezno check demo.ts --count-diagnostics'
           echo "::endgroup::"
+      
+      - name: Download parser files
+        run: |
+          curl https://esm.sh/v128/react-dom@18.2.0/es2022/react-dom.mjs > react.js
 
       - name: Run parser, minfier/stringer performance
         shell: bash
