Fixes to things
- Flatten some of the files around poly_types / generics
- Add test for JSX
- Add tests for optional parameters (default value is undefined)
- Add some more Console methods
- Fix array subtyping issues
- Add class method lifting for rest parameters
- Fix JSX children and template literal array length
- Test new source-map codespan files implementation (that doesn't clone
strings)
- Update some dependencies

--- a/.github/workflows/lines-of-code.yml
+++ b/.github/workflows/lines-of-code.yml
@@ -32,7 +32,7 @@ jobs:
                 linesOfRustCode=$(scc -c --no-cocomo -f json -i rs "$cratePath" | jq '.[] | .Code');
             fi
         
-            echo "\`$name\` has $linesOfRustCode lines of code" # >> $GITHUB_STEP_SUMMARY;
+            echo "\`$name\` has $linesOfRustCode lines of code" >> $GITHUB_STEP_SUMMARY;
 
             curl \
               --header "Content-Type: application/json" \
