--- a/checker/Cargo.toml
+++ b/checker/Cargo.toml
@@ -28,29 +28,26 @@ source-map = { version = "0.14.10", features = [
 
 binary-serialize-derive = { path = "./binary-serialize-derive", version = "0.0.1" }
 
-temporary-annex = "0.1.0"
+temporary-annex = "0.1"
 derive-enum-from-into = "0.2"
 derive-debug-extras = { version = "0.3", features = [
   "auto-debug-single-tuple-inline",
 ] }
 enum-variants-strings = "0.3"
 iterator-endiate = "0.2"
-bimap = "0.6.2"
-
 path-absolutize = { version = "3.0.14", features = ["use_unix_paths_on_wasm"] }
-indexmap = "2.1.0"
-either = "1.6.1"
-levenshtein = "1.0.5"
-once_cell = "1.10.0"
-ordered-float = "4.2.0"
-map_vec = "0.3.0"
+either = "1.6"
+levenshtein = "1"
+once_cell = "1.10"
+ordered-float = "4.2"
+map_vec = "0.5"
 
 serde = { version = "1.0", features = ["derive"], optional = true }
 simple-json-parser = "0.0.2"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 tsify = "0.4.5"
-wasm-bindgen = "=0.2.89"
+wasm-bindgen = "0.2"
 
 
 [dependencies.parser]
