--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -89,6 +89,10 @@ jobs:
           echo "::group::Comparing printing of diagnostics"
           hyperfine -i './target/release/ezno check demo.ts' './target/release/ezno check demo.ts --compact-diagnostics' './target/release/ezno check demo.ts --count-diagnostics'
           echo "::endgroup::"
+        
+          echo "::group::cargo tree"
+          cargo tree
+          echo "::endgroup::"
 
       - name: Run parser, minfier/stringer performance
         shell: bash
